# template-python-poetry

./: README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
scripts/: fill_template.py  lint.sh  unittest.sh
